CHANGELOGS: - Added Java 8 support - Updated Discord Link