@@ -21,6 +21,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.BookMeta;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class MoveEvent implements Listener {
@@ -52,7 +53,7 @@ public class MoveEvent implements Listener {
                 }
             }
 
-            List<Template> templates = List.of(
+            List<Template> templates = Arrays.asList(
                     Template.of("acceptbutton", Component.text(data.acceptButton).color(NamedTextColor.GREEN).clickEvent(
                             ClickEvent.runCommand("/acceptrules"))),
                     Template.of("declinebutton", Component.text(data.declineButton).color(NamedTextColor.RED).clickEvent(
